# pyregg

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  ec.rst  forest.rst  index.rst  mcc.rst  mcs.rst  md.rst  ntg.rst  planar.rst
examples/: edge_count.py  forest_acyclicity.py  max_clique_size.py  max_connected_component.py  max_degree.py  num_triangles.py  planarity.py
pyregg/: __init__.py  _ec.py  _forest.py  _mcc.py  _mcs.py  _md.py  _ntg.py  _planar.py  ec.py  forest.py  mcc.py  mcs.py  md.py  ntg.py  planar.py
