[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyregg"
version = "0.2.8"
description = "Rare-event simulation for random geometric graphs via importance sampling"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Sarat Moka", email = "s.moka@unsw.edu.au" },
]
keywords = ["rare events", "random geometric graphs", "Gilbert graph", "importance sampling", "Monte Carlo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.57",
    "networkx>=3.0",
]

[project.urls]
Homepage      = "https://saratmoka.com/"
Documentation = "https://pyregg.readthedocs.io"
Repository  = "https://github.com/saratmoka/pyregg"
Paper       = "https://arxiv.org/abs/2504.10530"
"Bug Tracker" = "https://github.com/saratmoka/pyregg/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyregg*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["examples/*.py"]
